--- a/1.html
+++ b/1.html
@@ -68,7 +68,7 @@
 
     <div class="faq-item">
       <h3>كيف أتواصل مع الدعم الفني؟</h3>
-      <p>يمكنك التواصل معنا عبر الإيميل <a href="mailto:support@drivo.app" style="color:#00aaff;">support@drivo.app</a> أو عبر صفحة التواصل.</p>
+      <p>يمكنك التواصل معنا عبر الإيميل <a href="mailto:support@drivo.app" style="color:#00aaff;">cftcgyhgg@gmail.com</a> أو عبر صفحة التواصل.</p>
     </div>
   </section>
 </body>
