--- a/2.html
+++ b/2.html
@@ -76,7 +76,7 @@
     <h2>8. تواصل معنا</h2>
     <p>
       لأي استفسارات حول سياسة الخصوصية، يُرجى التواصل عبر:  
-      <a href="mailto:support@drivo.app" style="color:#00aaff;">support@drivo.app</a>
+      <a href="mailto:cftcgyhgg@gmail.com" style="color:#00aaff;">cftcgyhgg@gmail.com</a>
     </p>
   </section>
 </body>
