--- a/3.html
+++ b/3.html
@@ -66,7 +66,7 @@
     <h2>6. التواصل معنا</h2>
     <p>
       لأي استفسارات، يمكنك التواصل معنا عبر البريد الإلكتروني التالي:  
-      <a href="mailto:support@drivo.app" style="color:#00aaff;">support@drivo.app</a>
+      <a href="mailto:cftcgyhgg@gmail.com" style="color:#00aaff;">cftcgyhgg@gmail.com</a>
     </p>
   </section>
 </body>
